# cabal-project-parser

./: CHANGELOG.md  README.md  cabal-project-parser.cabal
src/Distribution/: Project.hs
src/Distribution/Project/: Newtypes.hs  Optimization.hs  ParsecError.hs
