cabal-version:       2.2
name:                cabal-project-parser
version:             0.1
synopsis:            ???
description:         ???.
homepage:            ???
bug-reports:         ???
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Herbert Valerio Riedel, Oleg Grenrus, Ryan Scott
maintainer:          ???
category:            Distribution
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Distribution.Project
                       Distribution.Project.Newtypes
                       Distribution.Project.Optimization
                       Distribution.Project.ParsecError

  build-depends:
    , base          >=4.10     && <4.14
    , bytestring    ^>=0.10.8.1
    , Cabal         ^>=3.0
    , containers    ^>=0.5.7.1 || ^>=0.6.0.1
    -- , deepseq       ^>=1.4.2.0
    -- , directory     ^>=1.3.0.0
    , filepath      ^>=1.4.1.1
    -- , mtl           >=2.2.2
    -- , parsec        ^>=3.1.13.0
    , pretty        ^>=1.1.3.3
    -- , process       ^>=1.4.3.0 || ^>=1.6.1.0
    -- , text          ^>=1.2.3.0
    -- , transformers  ^>=0.5.2.0

  if !impl(ghc >=8.2)
    build-depends: bifunctors ^>=5.5.4

  -- other dependencies
  build-depends:
    -- , aeson                 ^>=1.4.2.0
    , base-compat           ^>=0.10.5
    -- , exceptions            ^>=0.10.0
    , generic-lens          ^>=1.2.0.0
    -- , HsYAML                ^>=0.2.0.0
    -- , lattices              ^>=2
    , microlens             ^>=0.4.10
    -- , optparse-applicative  ^>=0.15
    -- , temporary             ^>=1.3
    -- , unordered-containers  ^>=0.2.10.0

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
